--- a/templates/home.html
+++ b/templates/home.html
@@ -1,12 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>Bosh Sahifa</title>
-    </head>
-    <body>
-        <a href="{% url "about" %}">About</a>
-        <hr>
-        <h1>Hello!</h1>
-    </body>
-</html>
+{% extends "base.html" %}
+
+{% block content %}
+    <h1> Salom Django !!! </h1>
+{% endblock %}
