--- a/templates/about.html
+++ b/templates/about.html
@@ -1,12 +1,6 @@
- <!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>About US</title>
-    </head>
-    <body>
-        <a href="{% url "home" %}">Home</a>
-        <hr>
-        <h1>Welcome!</h1>
-    </body>
-</html>
+ {% extends "base.html" %}
+
+ {% block content %}
+            <h1>Welcome!</h1>
+
+ {% endblock %}
